[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.1"
rustls-pemfile = "1.0.3"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.0"
